# 2024-AGILE-RandomDataDistribution

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
doc/: swarm.md
pc-format/: Cargo.toml
pc-format/examples/: registration.rs
pc-format/src/: aabb.rs  aos.rs  compute.rs  framework.rs  lib.rs  point.rs  pointcloud.rs  schema.rs  soa.rs
pc-io/: Cargo.toml
pc-io/src/: convert.rs  las.rs  lib.rs  main.rs  parquet.rs  ply.rs
pc-server/: Cargo.toml
pc-server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
pc-server/src/handlers/: index.rs  load.rs  mod.rs  points.rs  status.rs  worker.rs
scripts/: ahn.py  ahn.txt  benchmark.py
