[package]
name = "pc-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
arrow = { workspace = true }
axum = { version = "0.7.4", features = ["macros"] }
dashmap = { workspace = true }
clap = { workspace = true }
dotenvy = "0.15.7"
futures = "0.3.30"
http-body-util = "0.1.1"
local-ip-address = "0.6.1"
moka = { workspace = true }
once_cell = "1.19.0"
rand = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
rstar = { workspace = true }
serde = { workspace = true }
serde_with = "3.7.0"
serde_qs =  "0.12.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["add-extension", "compression-zstd", "catch-panic", "cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { workspace = true }

pc-format = { path = "../pc-format" }
pc-io = { path = "../pc-io" }
